[package]
name = "tycho-vm"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["proc"]

[[bench]]
name = "ever_wallet"
harness = false

[[bench]]
name = "jetton"
harness = false

[[bench]]
name = "dex_pair"
harness = false

[dependencies]
ahash = "0.8"
anyhow = "1.0"
bitflags = "2.4"
blake2 = "0.10.6"
bumpalo = "3.14"
castaway = "0.2.3"
dyn-clone = "1.0"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
sha2 = "0.10.8"
thiserror = "2.0"
tracing = { version = "0.1", optional = true }

tycho-vm-proc = { path = "./proc" }
everscale-types = { version = "0.1.2", default-features = false, features = ["sync", "models"] }
everscale-crypto = "0.3.0"

[dev-dependencies]
criterion = "0.5"
hex = "0.4.3"
rand = "0.8"
tracing = "0.1"
tracing-test = "0.2"

everscale-types = { version = "0.1.2", default-features = false, features = [
    "sync",
    "models",
    "base64",
    "rand"
] }
everscale-asm-macros = { git = "https://github.com/broxus/everscale-asm.git", rev = "b9f5deaf7631aa83b39abfc74dcf324aa3e35b2d" }

[patch.crates-io]
everscale-types = { git = "https://github.com/broxus/everscale-types.git", rev = "e6f22bfa6d31b0f1f9bec63c22e86956cad22084" }
