[workspace.package]
edition = "2021"
authors = ["Rexagon <i.kalinin@dexpa.io>", "MrWad3r <s.eliseev@dexpa.io>"]
rust-version = "1.83.0"
repository = "https://github.com/broxus/tycho-vm"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = ["executor", "vm", "vm-proc"]

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
bitflags = "2.4"
blake2 = "0.10.6"
criterion = "0.5"
darling = "0.20"
dyn-clone = "1.0"
everscale-crypto = "0.3.0"
everscale-types = { version = "0.1.2", default-features = false }
hex = "0.4.3"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
sha2 = "0.10.8"
syn = "2.0"
thiserror = "2.0"
tl-proto = "0.5.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"

everscale-asm-macros = { git = "https://github.com/broxus/everscale-asm.git", rev = "799ae29a96ccd98db84882e7fe5fb20beba656a7" }

tycho-vm = { path = "./vm" }

[patch.crates-io]
everscale-types = { git = "https://github.com/broxus/everscale-types.git", rev = "f0d46607c19c9657b90360b4bc5c229a56540ffa" }
