[package]
name = "tycho-executor"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
everscale-types = { workspace = true, default-features = false, features = ["models"] }

tycho-vm = { path = "../vm" }
