[package]
name = "tycho-vm-proc"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
darling = { workspace = true }
proc-macro2 = { workspace = true }
