[package]
name = "tycho-vm"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[bench]]
name = "ever_wallet"
harness = false

[[bench]]
name = "jetton"
harness = false

[[bench]]
name = "dex_pair"
harness = false

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
bitflags = { workspace = true }
blake2 = { workspace = true }
dyn-clone = { workspace = true }
everscale-crypto = { workspace = true, features = ["tl-proto"] }
everscale-types = { workspace = true, default-features = false, features = ["models"] }
num-bigint = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tl-proto = { workspace = true }
tracing = { workspace = true, optional = true }

tycho-vm-proc = { path = "../vm-proc" }

[dev-dependencies]
criterion = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-test = { workspace = true }

everscale-types = { workspace = true, default-features = false, features = [
    "models",
    "base64",
    "rand",
] }
everscale-asm-macros = { workspace = true }
